--- a/tablet-desktop-style.css
+++ b/tablet-desktop-style.css
@@ -11,6 +11,30 @@
         min-width: calc(668px + 24px);
     }
 
+    /*footer on wider screens*/
+    footer > .contact-section{
+        padding: 24px 24px;
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
+        column-gap: 32px;
+    }
+
+    .contact-section > h1{
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+
+    .contact-section > .contact-me-message{
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+
+    .contact-section > .contact-details{
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+
     .about-me-section{
         display: grid;
         grid-template-columns: min-content max-content;
